# Cell-automata

./: .gitignore  .gitmodules  2d-matrix.hpp  README.md  test_fot_2d-matrix.hpp
Ising_model/: CMakeLists.txt  Ising_draw_func.hpp  Ising_global_variable.hpp  Ising_model.cpp  Ising_model_parameters.hpp  Ising_simulator.hpp  Ising_simulator_traits.hpp  Ising_system.hpp  Ising_traits.hpp  Ising_window_traits.hpp  Makefile  spin.hpp  spin_base.hpp  spin_params.hpp  system_initializer.hpp  system_initializer_func.hpp  test_for_Ising_system.cpp  test_for_spin.cpp  test_for_system_initializer_func.cpp  test_for_sysytem_initializer_func.cpp
Ising_model/test/: CMakeLists.txt  test_for_Ising_system.cpp  test_for_spin.cpp  test_for_system_initializer_func.cpp
openGLwrapper/: draw_figure.hpp  drawquads.hpp  make_canvas.hpp
